@@ -2151,4 +2151,7 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 16. Players more than 10X fatigued will have a 1% chance/tick to fall under the sleep spell.
 17. New Spell: Dispel Divination
 18. Players will be notified when users on FRIENDS list log off, just like logins.
- 
+19. FieryRoom Behavior tick parms apply to damage now, instead of room destruction (other parms for that anyway).
+20. CL Player Editor now allows Quest-Scripts to be Removed manually (to fix players with bad quest scripts attached to them)
+21. MG Catalog Manager will now show "most popular" area for stuff, and allows sorting by column
+  
